force-app/main/default/objects/FMGProjectMasterId__c/FMGProjectMasterId__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>ProjectMasterID</description>
    <label>FMGProjectMasterId</label>
</CustomObject>