force-app/main/default/objects/FMGProjectMasterId__c/fields/FMGSiteMasterId__c.field-meta.xml
<CustomField>
    <fullName>FMGSiteMasterId__c</fullName>
    <label>FMGSiteMasterId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>