force-app/main/default/objects/FMGProjectMasterId__c/fields/Platinum_Queue_task__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Queue_task__c</fullName>
    <label>Platinum Queue task</label>
    <length>25</length>
    <type>Text</type>
</CustomField>