force-app/main/default/objects/FMGProjectMasterId__c/fields/Product_Management_Team_del__c.field-meta.xml
<CustomField>
    <fullName>Product_Management_Team_del__c</fullName>
    <label>Product Management Team</label>
    <length>25</length>
    <type>Text</type>
</CustomField>