force-app/main/default/objects/FMGProjectMasterId__c/fields/ProjectMasterID__c.field-meta.xml
<CustomField>
    <fullName>ProjectMasterID__c</fullName>
    <label>ProjectMasterID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>