force-app/main/default/objects/FMGProjectMasterId__c/fields/RMA_Header_Action__c.field-meta.xml
<CustomField>
    <fullName>RMA_Header_Action__c</fullName>
    <label>RMA_Header_Action</label>
    <length>20</length>
    <type>Text</type>
</CustomField>