force-app/main/default/objects/FMGProjectMasterId__c/fields/SalesChannel_Id__c.field-meta.xml
<CustomField>
    <fullName>SalesChannel_Id__c</fullName>
    <label>SalesChannel Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>