force-app/main/default/objects/FMGProjectMasterId__c/fields/Special_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Special_Order_Id__c</fullName>
    <label>Special Order Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>